# scapy_CDP

./: .gitignore  README.md  cdp_sender.py  cdp_sender.service  pyproject.toml
.github/workflows/: ci.yml
examples/: send_cdp_example.py
scapy_cdp/: cdp_sender.py
tests/: test_parse_args.py
