[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-cdp-sender"
version = "0.1.0"
description = "Send customizable CDP packets using scapy"
readme = "README.md"
authors = [{name = "Unknown"}]
requires-python = ">=3.8"
dependencies = [
    "scapy"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools]
py-modules = ["cdp_sender"]
